[gd_scene load_steps=6 format=3 uid="uid://cm550g3ucpx4k"]

[ext_resource type="Script" path="res://ui/menus/layouts/simple/main_menu.gd" id="1_w5nt6"]
[ext_resource type="PackedScene" uid="uid://c0qgbmvagse3c" path="res://scenes/main/gameplay_prototype/gameplay_prototype.tscn" id="2_g6n12"]
[ext_resource type="Texture2D" uid="uid://bhtq8hl2norak" path="res://assets/menu_background.PNG" id="2_tavo0"]
[ext_resource type="Texture2D" uid="uid://r6xqw0o0mqnc" path="res://assets/menu_logo.PNG" id="3_kswcq"]
[ext_resource type="Theme" uid="uid://cnk8hgklgqfbx" path="res://ui/menus/layouts/simple/menu_theme.tres" id="3_sm6js"]

[node name="SimpleMenuCanvasLayer" type="CanvasLayer"]
script = ExtResource("1_w5nt6")
next_scene = ExtResource("2_g6n12")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_sm6js")

[node name="Background" type="TextureRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tavo0")
expand_mode = 2
stretch_mode = 5

[node name="TitleLabel" type="TextureRect" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_kswcq")
expand_mode = 2
stretch_mode = 4

[node name="MainMenuContent" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ExitGameButton" type="Button" parent="MainMenu/MainMenuContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "MENU_EXIT_GAME"

[node name="VersionLabel" type="Label" parent="MainMenu/MainMenuContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "v1.0.0"

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -101.5
offset_right = 68.5
offset_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 200

[node name="MainMenuButtons" type="CenterContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/MainMenuButtons"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="StartGameButton" type="Button" parent="MainMenu/MarginContainer/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_START"

[node name="SettingsButton" type="Button" parent="MainMenu/MarginContainer/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "MENU_SETTINGS"

[node name="CreditsButton" type="Button" parent="MainMenu/MarginContainer/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_CREDITS"

[node name="StartSettings" type="PanelContainer" parent="MainMenu"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/StartSettings"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/StartSettings/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/StartSettings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/StartSettings/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="PlayerName" type="LineEdit" parent="MainMenu/StartSettings/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnterButton" type="Button" parent="MainMenu/StartSettings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Credits" type="PanelContainer" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -150.0
offset_right = 92.5
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/Credits"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Credits/MarginContainer"]
layout_mode = 2

[node name="ProgramLabel" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Godot Development"
horizontal_alignment = 1

[node name="LunelContainer" type="HBoxContainer" parent="MainMenu/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Lunel" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer/LunelContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lunel"
horizontal_alignment = 1

[node name="LunelItch" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer/LunelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "astrowl.itch.io"
horizontal_alignment = 2

[node name="OutisimContainer" type="HBoxContainer" parent="MainMenu/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Outisim" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer/OutisimContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Outisim
"
horizontal_alignment = 1

[node name="OutisimItch" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer/OutisimContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="VisualLabel" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Visual Design"
horizontal_alignment = 1

[node name="SevenContainer" type="HBoxContainer" parent="MainMenu/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Seven" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer/SevenContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "halcyyyon"
horizontal_alignment = 1

[node name="SevenItch" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer/SevenContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="AudioLabel" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music & Sound Design"
horizontal_alignment = 1

[node name="LaylaContainer" type="HBoxContainer" parent="MainMenu/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Layla" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer/LaylaContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Layla_OT"
horizontal_alignment = 1

[node name="LaylaItch" type="Label" parent="MainMenu/Credits/MarginContainer/VBoxContainer/LaylaContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Back" type="Button" parent="MainMenu/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
